--- a/smazon.jade
+++ b/smazon.jade
@@ -7,12 +7,9 @@ body
 
 
 
-
-
-
-
 // === template ==============
 
 template(name='hello')
   button Click Me
   p You've pressed the button !{counter} times.
+  #render-target
